fix: increase social bar z-index to 9999 to ensure visibility on all pages

--- a/src/components/socialsbar/SocialsBar.module.css
+++ b/src/components/socialsbar/SocialsBar.module.css
@@ -1,5 +1,5 @@
 .socialsBar {
-  @apply z-[60] flex flex-col items-center fixed bottom-0 left-0 px-4 sm:hidden;
+  @apply z-[9999] flex flex-col items-center fixed bottom-0 left-0 px-4 sm:hidden;
   padding-top: 20px;
   padding-bottom: 20px;
   gap: 24px;
